--- a/index.html
+++ b/index.html
@@ -123,43 +123,29 @@
         const resultContainer = document.getElementById('resultContainer');
 
         // --- Helper Function to call Gemini API ---
-        const callGeminiAPI = async (prompt, retries = 3, delay = 1000) => {
-            const apiKey = ""; // This is handled by the Canvas environment.
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
+     const callGeminiAPI = async (prompt) => {
+  // call your local backend instead of Google's API directly
+  const response = await fetch('http://localhost:3000/analyze', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ prompt })
+  });
 
-            const payload = {
-                contents: [{ role: "user", parts: [{ text: prompt }] }],
-                generationConfig: { temperature: 0.6, topK: 1, topP: 1 }
-            };
+  if (!response.ok) {
+    const text = await response.text();
+    throw new Error('Backend error: ' + text);
+  }
 
-            for (let i = 0; i < retries; i++) {
-                try {
-                    const response = await fetch(apiUrl, {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(payload)
-                    });
+  const data = await response.json();
 
-                    if (!response.ok) {
-                        const errorBody = await response.text();
-                        throw new Error(`HTTP error! status: ${response.status}, body: ${errorBody}`);
-                    }
+  // extract the same piece of text you used earlier
+  if (data.candidates && data.candidates[0]?.content?.parts?.[0]?.text) {
+    return data.candidates[0].content.parts[0].text;
+  } else {
+    throw new Error('Invalid API response: ' + JSON.stringify(data));
+  }
+};
 
-                    const result = await response.json();
-                    
-                    if (result.candidates && result.candidates[0]?.content?.parts?.[0]?.text) {
-                        return result.candidates[0].content.parts[0].text;
-                    } else {
-                        throw new Error("Invalid response structure from API. Full response: " + JSON.stringify(result));
-                    }
-                } catch (error) {
-                    console.error(`API call attempt ${i + 1} failed:`, error);
-                    if (i === retries - 1) throw error; // Throw error on last retry
-                    await new Promise(res => setTimeout(res, delay));
-                    delay *= 2; // Exponential backoff
-                }
-            }
-        };
 
         // --- UI Update Functions ---
         const showLoading = () => {
@@ -249,3 +235,4 @@
     </script>
 </body>
 </html>
+
